--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -2,7 +2,7 @@
   pointer-events: none;
 
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: 196px;
   right: var(--size-xxs);
   bottom: var(--size-xxs);
@@ -126,6 +126,7 @@
   flex: 1;
 
   max-width: 80px;
+  height: 80px;
   margin-right: 1px;
 
   background: linear-gradient(
@@ -145,12 +146,15 @@
     1;
 }
 
+.Navbar-breadcrumb .Breadcrumb-name {
+  font-size: 0.75em;
+}
+
 .Navbar-regionStats {
   display: flex;
   gap: var(--size-sm);
 
   width: 100%;
-  margin-left: 1px;
   padding: var(--size-xs) var(--size-sm);
 
   background: linear-gradient(
